api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debt-management-api-service
  labels:
    app: debt-management-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: debt-management-api
---
apiVersion: v1
kind: Service
metadata:
  name: debt-management-api-nodeport
  labels:
    app: debt-management-api
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
    protocol: TCP
    name: http
  selector:
    app: debt-management-api
